doc/releases/0.90.0/tests-checklist-yaqing.md
## Telemetry Prologue

* Before starting your tests, go to General settings, enable "Diagnostic data" and "Enable viewing" and restart PowerToys.

## Telemetry Epilogue

* After finishing your tests, go to General settings, press Diagnostic data viewer and check if you have xml files for the utilities you've tested and if it looks like the events in those xml files were generated by the actions you did with the utilities you've tested.

## 

## Localization

 Change the Windows language to a language different than English. Then verify if the following screens change their language:

- [ ] System tray menu items
- [ ] Settings
- [ ] OOBE (What's new)
- [ ] Keyboard Manager Editor
- [ ] Color Picker (check the tooltips)
- [ ] FancyZones Editor
- [ ] Power Rename (new WinUI 3 may not be localized)
- [ ] PowerToys Run ("Start typing" string is localized, for example)
- [ ] Image Resizer
- [ ] Shortcut Guide (Windows controls are localized)
- [ ] File Explorer menu entries for Image Resizer, Power Rename and FileLocksmith
- [ ] Hosts File Editor
- [ ] File Locksmith
- [ ] Registry Preview
- [ ] Environment Variables

## General Settings

**Quick access tray icon flyout:**

- [ ] Use left click on the system tray icon and verify the flyout appears. (It'll take a bit the first time)
- [ ] Try to launch a module from the launch screen in the flyout.
- [ ] Try disabling a module in the all apps screen in the flyout, make it a module that's launchable from the launch screen. Verify that the module is disabled and that it also disappeared from the launch screen in the flyout.
- [ ] Open the main settings screen on a module page. Verify that when you disable/enable the module on the flyout, that the Settings page is updated too.

## Mouse Utils

Find My Mouse:

* Enable FindMyMouse. Then, without moving your mouse:
  - [ ] Press Left Ctrl twice and verify the overlay appears.
  - [ ] Press any other key and verify the overlay disappears.
  - [ ] Press Left Ctrl twice and verify the overlay appears.
  - [ ] Press a mouse button and verify the overlay disappears.
* Disable FindMyMouse. Verify the overlay no longer appears when you press Left Ctrl twice.
* Enable FindMyMouse. Then, without moving your mouse:
  - [ ] Press Left Ctrl twice and verify the overlay appears.
* Enable the "Do not activate on game mode" option. Start playing a game that uses CG native full screen.
  - [ ] Verify the overlay no longer appears when you press Left Ctrl twice.
* Disable the "Do not activate on game mode" option. Start playing the same game.
  - [ ] Verify the overlay appears when you press Left Ctrl twice. (though it'll likely minimize the game)
* Test the different settings and verify they apply:
  - [ ] Overlay opacity
  - [ ] Background color
  - [ ] Spotlight color
  - [ ] Spotlight radius
  - [ ] Spotlight initial zoom (1x vs 9x will show the difference)
  - [ ] Animation duration
  - [ ] Change activation method to shake and activate by shaking your mouse pointer
  - [ ] Excluded apps

Mouse Highlighter:

* Enable Mouse Highlighter. Then:
  - [ ] Press the activation shortcut and press left and right click somewhere, verifying the hightlights are applied.
  - [ ] With left mouse button pressed, drag the mouse and verify the hightlight is dragged with the pointer.
  - [ ] With right mouse button pressed, drag the mouse and verify the hightlight is dragged with the pointer.
  - [ ] Press the activation shortcut again and verify no highlights appear when the mouse buttons are clicked.
  - [ ] Disable Mouse Highlighter and verify that the module is not activated when you press the activation shortcut.
* Test the different settings and verify they apply:
  - [ ] Change activation shortcut and test it
  - [ ] Left button highlight color
  - [ ] Right button highlight color
  - [ ] Opacity
  - [ ] Radius
  - [ ] Fade delay
  - [ ] Fade duration

Mouse Pointer Crosshairs:

* Enable Mouse Pointer Crosshairs. Then:
  - [ ] Press the activation shortcut and verify the crosshairs appear, and that they follow the mouse around.
  - [ ] Press the activation shortcut again and verify the crosshairs disappear.
  - [ ] Disable Mouse Pointer Crosshairs and verify that the module is not activated when you press the activation shortcut.
* Test the different settings and verify they apply:
  - [ ] Change activation shortcut and test it
  - [ ] Crosshairs color
  - [ ] Crosshairs opacity
  - [ ] Crosshairs center radius
  - [ ] Crosshairs thickness
  - [ ] Crosshairs border color
  - [ ] Crosshairs border size

Mouse Jump:

* Enable Mouse Jump. Then:
  - [ ] Press the activation shortcut and verify the screens preview appears.
  - [ ] Change activation shortcut and verify that new shorctut triggers Mouse Jump.
  - [ ] Click around the screen preview and ensure that mouse cursor jumped to clicked location.
  - [ ] Reorder screens in Display settings and confirm that Mouse Jump reflects the change and still works correctly.
  - [ ] Change scaling of screens and confirm that Mouse Jump still works correctly.
  - [ ] Unplug additional monitors and confirm that Mouse Jump still works correctly.
  - [ ] Disable Mouse Jump and verify that the module is not activated when you press the activation shortcut.

## GPO

* Copy the "PowerToys.admx" file to your Policy Definition template folder. (Example: C:\Windows\PolicyDefinitions) and copy the "PowerToys.adml" file to the matching language folder in your Policy Definition folder. (Example: C:\Windows\PolicyDefinitions\en-US)
  - [ ] Open the "Local Group Policy Editor" on Windows and verify there is a "Microsoft PowerToys" folder in Administrative Templates for both Computer Configuration and User Configuration.
* In GPO, disable a module that can run as a standalone (FancyZones sounds good for this). Restart PowerToys.
  - [ ] Verify the module is not enabled.
  - [ ] Open settings and verify the module is not enabled and you can't enable it.
  - [ ] Try to open FancyZones Editor directly from the install folder and verify it doesn't run and adds a message to the log saying it didn't run because of GPO.
  - [ ] Verify the module can't be launched from the quick launcher system tray flyout launcher screen (FancyZones editor in this case).
  - [ ] Verify the module can't be enabled/disabled from the quick launcher system tray flyout.
* In GPO, enable a module that can run as a standalone (FancyZones sounds good for this). Restart PowerToys.
  - [ ] Verify the module is enabled.
  - [ ] Open settings and verify the module is enabled and you can't disable it.
  - [ ] Verify the module can't be enabled/disabled from the quick launcher system tray flyout.
* In GPO, try to set different settings in the Computer and User Configurations for a PowerToy. Restart PowerToys.
  - [ ] Verify that the setting in Computer Configuration has priority over the setting in User Configuration.
* In GPO, disable a module that has a context menu entry (File Locksmith sounds good for this). Restart PowerToys.
  - [ ] Verify the module is not enabled. (No context menu entry)
  - [ ] Open settings and verify the module is not enabled and you can't enable it.
  - [ ] Try to open File Locksmith directly from the install folder and verify it doesn't run and adds a message to the log saying it didn't run because of GPO.
* In GPO, disable a module that is a Preview Handler (Markdown Preview is good for this). Restart PowerToys.
  - [ ] Verify the module is not enabled. (Markdown files won't appear in the preview pane)
  - [ ] Open settings and verify the module is not enabled and you can't enable it.
* Remember to reset all you Settings to Not Configured after the tests, both in Conputer and User Configurations.

## DSC

* You need to have some prerequisites installed:
  - PowerShell >= 7.2 .
  - PSDesiredStateConfiguration 2.0.7 or higher `Install-Module -Name PSDesiredStateConfiguration`.
  - WinGet [version v1.6.2631 or later](https://github.com/microsoft/winget-cli/releases). (You'll likely have this one already)
* Open a PowerShell 7 instance and navigate to the sample scripts from PowerToys (`src/dsc/Microsoft.PowerToys.Configure/examples/`).
  - [ ] Run `winget configure .\disableAllModules.dsc.yaml`. Open PowerToys Settings and verify all modules are disabled.
  - [ ] Run `winget configure .\enableAllModules.dsc.yaml`. Open PowerToys Settings and verify all modules are enabled.
  - [ ] Run `winget configure .\configureLauncherPlugins.dsc.yaml`. Open PowerToys Settings and verify all PowerToys Run plugins are enabled, and the Program plugin is not global and its Activation Keyword has changed to "P:".
  - [ ] Run `winget configure .\configuration.dsc.yaml`. Open PowerToys Settings the Settings have been applied. File Locksmith is disabled. Shortcut Guide is disabled with an overlay opacity set to 50. FancyZones is enabled with the Editor hotkey set to "Shift+Ctrl+Alt+F".
  - [ ] If you run a winget configure command above and PowerToys is running, it will eventually close and automatically reopen after the configuration process is done.
  - [ ] If you run a winget configure command above and PowerToys is not running, it won't automatically reopen after the configuration process is done.

## New+

* Enable New+ in Settings.
  - [ ] Verify NewPlus menu is in Explorer context menu. (Windows 11 tier 1 context menu only. May need Explorer restart.)
* Disable New+ in Settings.
  - [ ] Verify NewPlus menu is not in Explorer context menu.
* Choose a different path for template folder.
  - [ ] Verify the folder is created and empty.
  - [ ] Copy a file to the templates folder, verify it's added to the New+ context menu and that if you select it the file is created.
  - [ ] Copy a folder with files inside to the templates folder, verify it's added to the New+ context menu and that if you select it the folder and files inside are created.
  - [ ] Delete all files and folders from inside the templates folder. Verify that no templates are available in the context menu.
  - [ ] Disable and re-Enable New+ while the templates folder is still empty. Verify the default templates were copied over and are available in the context menu.
* Test some Settings:
  - [ ] Test the "Hide template filename extension" option in Settings.
  - [ ] Test the "Hide template filename starting digits, spaces and dots" option in Settings.

## ZoomIt

* Enable ZoomIt in Settings.
  - [ ] Verify ZoomIt tray icon appears in the tray icons, and that when you left-click or right-click, it just shows the 4 action entries: "Break Timer", "Draw", "Zoom" and "Record".
  - [ ] Turn the "Show tray icon" option off and verify the tray icon is gone.
  - [ ] Turn the "Show tray icon" option on and verify the tray icon is back.
* Test the base modes through a shortcuts:
  - [ ] Press the Zoom Toggle Hotkey and verify ZoomIt zooms in on the mouse. You can exit Zoom by pressing Escape or the Hotkey again.
  - [ ] Press the Live Zoom Toggle Hotkey and verify ZoomIt zooms in on the mouse, while the screen still updates instead of showing a still image. You can exit Live Zoom by pressing the Hotkey again.
  - [ ] Press the Draw without Zoom Hotkey and verify you can draw. You can leave this mode by pressing the Escape.
  - [ ] Select a text file as the Input file for Demo Type, focus notepad and press the Demo Type hotkey. It should start typing the text file. You can exit Demo Type by pressing Escape.
  - [ ] Press the Start Break Timer Hotkey and verify it starts the Timer. You can exit by pressing Escape.
  - [ ] Press the Record Toggle Hotkey to start recording a screen. Press the Record Toggle Hotkey again to exit the mode and save the recording to a file.
  - [ ] Press the Snip Toggle Hotkey to take a snip of the screen. Paste it to Paint to verify a snip was taken.
* Test some Settings to verify the types are being passed correctly to ZoomIt:
  - [ ] Change the "Animate zoom in and zoom out" setting and activate Zoom mode to verify it applies.
  - [ ] Change the "Specify the initial level of magnification when zooming in" and activate Zoom mode to verify it applies.
  - [ ] Change the Type Font to another font. Enter Break mode to quickly verify the font changed.
  - [ ] Change the Demo Type typing speed and verify the change applies.
  - [ ] Change the timer Opacity for Break mode and verify that the change applies.
  - [ ] Change the timer Position for Break mode and verify that the change applies.
  - [ ] Select a Background Image file as background for Break mode and verify that the change applies.
  - [ ] Turn on "Play Sound on Expiration", select a sound file, aset the timer to 1 minute, activate the Break Mode and verify the sound plays after 1 minute. (Alarm1.wav from "C:\Windows\Media" should be long enough to notice)
  - [ ] Open the Microphone combo box in the Record section and verify it lists your microphones.
* Test the tray icon actions:
  - [ ] Verify pressing "Break Timer" enters Break mode.
  - [ ] Verify pressing "Draw" enters Draw mode.
  - [ ] Verify pressing "Zoom" enters Zoom mode.
  - [ ] Verify pressing "Record" enters Record mode.


